# my-os

./: .dir-locals.el  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  Xargo.toml  local-funs.el
src/: interrupts.rs  lib.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  grub.cfg  linker.ld  long_mode_init.asm  multiboot_header.asm
src/interrupts/: gdt.rs  mod.rs
src/memory/: area_frame_allocator.rs  heap_allocator.rs  mod.rs  stack_allocator.rs
src/memory/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
