[package]
name = "my_os"
version = "0.1.0"
authors = ["Lucas Vieira <lucasvieira@protonmail.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0"
volatile = "0.2.3"
spin = "0.4.6"
multiboot2 = "0.3.2"
bitflags = "1.0"
x86_64 = "0.1.2"
once = "0.3.3"
linked_list_allocator = "0.4.2"
bit_field = "0.9.0"

[dependencies.lazy_static]
version = "1.0.0"
features = ["spin_no_std"]

